Prevent unnecessary register saving in css jit. https://bugs.webkit.org/show_bug.cgi?id=133955

Reviewed by Geoff Garen.

* cssjit/FunctionCall.h:
(WebCore::FunctionCall::prepareAndCall):
(WebCore::FunctionCall::cleanupPostCall):
(WebCore::FunctionCall::saveAllocatedCallerSavedRegisters):
(WebCore::FunctionCall::restoreAllocatedCallerSavedRegisters):
(WebCore::FunctionCall::saveAllocatedRegisters): Renamed to saveAllocatedCallerSavedRegisters.
(WebCore::FunctionCall::restoreAllocatedRegisters): Renamed to restoreAllocatedCallerSavedRegisters.
Only push caller saved registers before function calls.
* cssjit/RegisterAllocator.h:
(WebCore::RegisterAllocator::isValidRegister):
Corrected register ranges.
(WebCore::RegisterAllocator::isCallerSavedRegister): Added.



Canonical link: https://commits.webkit.org/152388@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170548 268f45cc-cd09-0410-ab3c-d52691b4dbfc