Source/WebCore/cssjit/FunctionCall.h
@@ -113,7 +113,7 @@ private:
         ASSERT(m_functionAddress.executableAddress());
         ASSERT(!m_firstArgument || (m_firstArgument && !m_secondArgument) || (m_firstArgument && m_secondArgument));
 
-        saveAllocatedRegisters();
+        saveAllocatedCallerSavedRegisters();
         m_stackAllocator.alignStackPreFunctionCall();
 
         if (m_argumentCount == 2) {
@@ -155,20 +155,25 @@ private:
     void cleanupPostCall()
     {
         m_stackAllocator.unalignStackPostFunctionCall();
-        restoreAllocatedRegisters();
+        restoreAllocatedCallerSavedRegisters();
     }
 
-    void saveAllocatedRegisters()
+    void saveAllocatedCallerSavedRegisters()
     {
         ASSERT(m_savedRegisterStackReferences.isEmpty());
+        ASSERT(m_savedRegisters.isEmpty());
         const Vector<JSC::MacroAssembler::RegisterID, registerCount>& allocatedRegisters = m_registerAllocator.allocatedRegisters();
-        Vector<StackAllocator::StackReference> stackReferences = m_stackAllocator.push(allocatedRegisters);
+        for (auto registerID : allocatedRegisters) {
+            if (RegisterAllocator::isCallerSavedRegister(registerID))
+                m_savedRegisters.append(registerID);
+        }
+        Vector<StackAllocator::StackReference> stackReferences = m_stackAllocator.push(m_savedRegisters);
         m_savedRegisterStackReferences.appendVector(stackReferences);
     }
 
-    void restoreAllocatedRegisters()
+    void restoreAllocatedCallerSavedRegisters()
     {
-        m_stackAllocator.pop(m_savedRegisterStackReferences, m_registerAllocator.allocatedRegisters());
+        m_stackAllocator.pop(m_savedRegisterStackReferences, m_savedRegisters);
         m_savedRegisterStackReferences.clear();
     }
 
@@ -177,8 +182,9 @@ private:
     StackAllocator& m_stackAllocator;
     Vector<std::pair<JSC::MacroAssembler::Call, JSC::FunctionPtr>>& m_callRegistry;
 
-    Vector<StackAllocator::StackReference> m_savedRegisterStackReferences;
-
+    Vector<JSC::MacroAssembler::RegisterID, registerCount> m_savedRegisters;
+    Vector<StackAllocator::StackReference, registerCount> m_savedRegisterStackReferences;
+    
     JSC::FunctionPtr m_functionAddress;
     unsigned m_argumentCount;
     JSC::MacroAssembler::RegisterID m_firstArgument;
